Fix footer positioning in landscape mode on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,16 @@ html {
   margin: 0;
 }
 
-body {
-  height: 100vh;
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-#root {
-  width: 100%;
-  height: 100%;
+.barcode-reader {
+  flex: 1 0 auto;
+}
+
+footer {
+  margin-top: 2rem;
 }
